fix: align card footer items and move avatar over card section

--- a/src/profile/index.scss
+++ b/src/profile/index.scss
@@ -167,14 +167,23 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     margin: 1px;
-    width: 150px;
-    height: 100px;
   }
   .pgn-icons-cell-horizontal {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     margin: 1px;
+  }
+
+  .profile-plugin-avatar {
+    @include media-breakpoint-up(xs) {
+      max-width: 12rem;
+      margin-right: 0;
+      margin-top: -4rem;
+      margin-bottom: 1rem;
+    }
   }
 
 }
